# learning-objective-c

./: .CLAUDE  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt
source/01-phase1/: CMakeLists.txt  README.md  main.m
source/02-phase2/: CMakeLists.txt  README.md  main.m
source/02-phase21/: CMakeLists.txt  Idol.h  Idol.m  Singer.h  main.m
source/03-phase3/: CMakeLists.txt  main.m
source/03-phase31/: CMakeLists.txt  Dancer.h  Singer.h  main.m
source/04-phase4/: CMakeLists.txt  README.md  main.m
source/04-phase41/: Boss.h  Boss.m  CMakeLists.txt  Employee.h  Employee.m  NSString+EmailValidation.h  NSString+EmailValidation.m  main.m
source/05-phase5/: CMakeLists.txt  Greeter.h  Greeter.m  main.mm
source/06-phase6/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  CanvasView.h  CanvasView.mm  ColorScheme.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  ContourBuilder.cpp  ContourBuilder.h  ContourLine.h  ControlPanel.h  ControlPanel.m  ElevationPoint.h  FillStrategy.cpp  FillStrategy.h  OpenGLRenderer.cpp  OpenGLRenderer.h  README.md  Scene.cpp  Scene.h  SceneBridge.h  SceneBridge.mm  Shape.h  ShapeArc.cpp  ShapeArc.h  ShapeFactory.cpp  ShapeFactory.h  ShapeLine.cpp  ShapeLine.h  ShapeParamPanel.h  ShapeParamPanel.m  ShapePolygon.cpp  ShapePolygon.h  TerrainGrid.cpp  TerrainGrid.h  TerrainLabelOverlay.h  TerrainLabelOverlay.m  (+4 more)
